<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/layout"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/large_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Busnoline" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/NameDriver">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NameDriver" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/forMonthB">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:hint="@string/forMonthB"
                    android:inputType="date"
                    android:linksClickable="true"
                    android:onClick="setDate" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/forMonthE">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:hint="@string/forMonthE"
                    android:inputType="date"
                    android:linksClickable="true"
                    android:onClick="setDate" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerType"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:backgroundTint="@color/colorAccent"
                android:dropDownWidth="match_parent"
                android:popupBackground="@color/colorGrayPrimary" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/colorAccent"
                android:popupBackground="@color/colorGrayPrimary" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/colorAccent"
                android:clipChildren="false"
                android:isScrollContainer="true"
                android:popupBackground="@color/colorGrayPrimary"
                android:spinnerMode="dropdown" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>